@@ -611,11 +611,11 @@ class FormMailerAdapter(FormActionAdapter):
     security.declarePublic('setBody_pt')
     def setBody_pt(self, value, **kw):
         """ set body template with BBB for accessors """
-
+        
         if shasattr(value, 'replace'):
             template = value
             for s, t in [('body_pre', 'getBody_pre'),
-                         ('body_post', 'getBody_post'),
+                         ('body_post', 'getBody_post'), 
                          ('body_footer', 'getBody_footer')]:
                 template = template.replace('here/%s' % s, 'here/%s' % t)
             myField = self.getField('body_pt')
@@ -630,7 +630,7 @@ class FormMailerAdapter(FormActionAdapter):
     security.declarePublic('getBody_pre')
     def getBody_pre(self):
         """ get expanded mail body prefix """
-
+        
         return self._dreplace( self.getRawBody_pre() )
 
 
@@ -652,11 +652,9 @@ class FormMailerAdapter(FormActionAdapter):
     def get_mail_text(self, fields, request, **kwargs):
         """Get header and body of e-mail as text (string)
         """
-
-        liveFields = self._fieldsToInclude(fields)
-
+        
         (headerinfo, additional_headers,
-         body) = self.get_header_body_tuple(liveFields, request, **kwargs)
+         body) = self.get_header_body_tuple(fields, request, **kwargs)
 
         if not isinstance(body, unicode):
             body = unicode(body, self._site_encoding())
@@ -665,7 +663,7 @@ class FormMailerAdapter(FormActionAdapter):
         mime_text = MIMEText(body.encode(email_charset , 'replace'),
                 _subtype=self.body_type or 'html', _charset=email_charset)
 
-        attachments = self.get_attachments(liveFields, request)
+        attachments = self.get_attachments(fields, request)
 
         if attachments:
             outer = MIMEMultipart()
@@ -712,31 +710,6 @@ class FormMailerAdapter(FormActionAdapter):
         return outer.as_string()
 
 
-    def _fieldsToInclude(self, fields):
-        # Determine which fields should be included in the mailing
-
-        all_fields = [f for f in fields
-            if not (f.isLabel() or f.isFileField()) and not (getattr(self, 'showAll', True) and f.getServerSide())]
-
-        # which fields should we show?
-        if getattr(self, 'showAll', True):
-            live_fields = all_fields
-        else:
-            live_fields = \
-                [f for f in all_fields
-                   if f.fgField.getName() in getattr(self, 'showFields', ())]
-
-        if not getattr(self, 'includeEmpties', True):
-            all_fields = live_fields
-            live_fields = []
-            for f in all_fields:
-                value = f.htmlValue(self.REQUEST)
-                if value and value != 'No Input':
-                    live_fields.append(f)
-
-        return live_fields
-
-
     def get_attachments(self, fields, request):
         """Return all attachments uploaded in form.
         """
@@ -746,7 +719,8 @@ class FormMailerAdapter(FormActionAdapter):
         attachments = []
 
         for field in fields:
-            if field.isFileField():
+            if field.isFileField() and (getattr(self, 'showAll', True) \
+                or field.fgField.getName() in getattr(self, 'showFields', ())):
                 file = request.form.get('%s_file' % field.__name__, None)
                 if file and isinstance(file, FileUpload) and file.filename != '':
                     file.seek(0) # rewind
@@ -766,32 +740,32 @@ class FormMailerAdapter(FormActionAdapter):
         else:
             request = self.REQUEST
 
-        # all_fields = [f for f in fields
-        #     if not (f.isLabel() or f.isFileField()) and not (getattr(self, 'showAll', True) and f.getServerSide())]
-        # 
-        # # which fields should we show?
-        # if getattr(self, 'showAll', True):
-        #     live_fields = all_fields
-        # else:
-        #     live_fields = \
-        #         [f for f in all_fields
-        #            if f.fgField.getName() in getattr(self, 'showFields', ())]
-        # 
-        # if not getattr(self, 'includeEmpties', True):
-        #     all_fields = live_fields
-        #     live_fields = []
-        #     for f in all_fields:
-        #         value = f.htmlValue(request)
-        #         if value and value != 'No Input':
-        #             live_fields.append(f)
+        all_fields = [f for f in fields
+            if not (f.isLabel() or f.isFileField()) and not (getattr(self, 'showAll', True) and f.getServerSide())]
 
-        bare_fields = [f.fgField for f in fields]
+        # which fields should we show?
+        if getattr(self, 'showAll', True):
+            live_fields = all_fields 
+        else:
+            live_fields = \
+                [f for f in all_fields
+                   if f.fgField.getName() in getattr(self, 'showFields', ())]
+
+        if not getattr(self, 'includeEmpties', True):
+            all_fields = live_fields
+            live_fields = []
+            for f in all_fields:
+                value = f.htmlValue(request)
+                if value and value != 'No Input':
+                    live_fields.append(f)
+                
+        bare_fields = [f.fgField for f in live_fields]
         bodyfield = self.getField('body_pt')
-
+        
         # pass both the bare_fields (fgFields only) and full fields.
         # bare_fields for compatability with older templates,
         # full fields to enable access to htmlValue
-        body = bodyfield.get(self, fields=bare_fields, wrappedFields=fields,**kwargs)
+        body = bodyfield.get(self, fields=bare_fields, wrappedFields=live_fields,**kwargs)
 
         if isinstance(body, unicode):
             body = body.encode(self.getCharset())
@@ -829,8 +803,8 @@ class FormMailerAdapter(FormActionAdapter):
             input = [s for s in input.split(',')]
         input = [s for s in input if s]
         filtered_input = [s.strip().encode('utf-8') for s in input]
-
-        if filtered_input:
+        
+        if filtered_input:        
             return "<%s>" % '>, <'.join( filtered_input )
         else:
             return ''
@@ -854,7 +828,7 @@ class FormMailerAdapter(FormActionAdapter):
         portal = getToolByName(self, 'portal_url').getPortalObject()
         pms = getToolByName(self, 'portal_membership')
         utils = getToolByName(self, 'plone_utils')
-
+        
         body = self.get_mail_body(fields, **kwargs)
 
         # fields = self.fgFields()
@@ -907,7 +881,7 @@ class FormMailerAdapter(FormActionAdapter):
             userdest = pms.getMemberById(ownerid)
             toemail = userdest.getProperty('email', '')
             if not toemail:
-                toemail = portal.getProperty('email_from_address')
+                toemail = portal.getProperty('email_from_address')                
             assert toemail, """
                     Unable to mail form input because no recipient address has been specified.
                     Please check the recipient settings of the PloneFormGen "Mailer" within the
@@ -928,9 +902,9 @@ class FormMailerAdapter(FormActionAdapter):
         email_charset = portal.getProperty('email_charset', 'utf-8')
 
         if not isinstance(subject, unicode):
-            site_charset = utils.getSiteEncoding()
-            subject = unicode(subject, site_charset, 'replace')
-
+            site_charset = utils.getSiteEncoding()            
+            subject = unicode(subject, site_charset, 'replace')        
+        
         msgSubject = self.secure_header_line(subject).encode(email_charset, 'replace')
         msgSubject = str(Header(msgSubject, email_charset))
         headerinfo['Subject'] = msgSubject
